fix wrong file name

--- a/server/main/BUILD
+++ b/server/main/BUILD
@@ -2,7 +2,7 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
 
 cc_binary(
     name = "hello",
-    srcs = ["greeter.server.cc"],
+    srcs = ["greeter_server.cc"],
     deps = [
         "@com_github_grpc_grpc//:grpc++_reflection",
     ],
