build libpqxx success; normalize file name

--- a/server/BUILD
+++ b/server/BUILD
@@ -15,8 +15,8 @@ cc_binary(
         "helloworld.grpc.pb.cc",
         "helloworld.grpc.pb.h",
         "helloworld.pb.h",
-        "dbhelper.cc",
-        "dbhelper.h",
+        "redis_helper.cc",
+        "redis_helper.h",
     ],
     # copts = ["-I/usr/local/include"],
     # linkopts = ["-lhiredis"],
@@ -29,6 +29,26 @@ cc_binary(
     # linkstatic = 1,
 )
 
+load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")
+
+
+cmake_external(
+   name = "libpgxx",
+   lib_name = "libpgxx",
+   # Values to be passed as -Dkey=value on the CMake command line;
+   # here are serving to provide some CMake script configuration options
+   cache_entries = {
+       "NOFORTRAN": "on",
+       "BUILD_WITHOUT_LAPACK": "no",
+   },
+   lib_source = "@libpgxx//:all",
+
+   # We are selecting the resulting static library to be passed in C/C++ provider
+   # as the result of the build;
+   # However, the cmake_external dependants could use other artefacts provided by the build,
+   # according to their CMake script
+   static_libraries = ["libpqxx-7.0.a"],
+)
 
 cc_binary(
     name = "vipuserserver",
@@ -36,8 +56,8 @@ cc_binary(
         "server_main.cc",
         "vipuser_server.cc",
         "vipuser_server.h",
-        "dbhelper.cc",
-        "dbhelper.h",
+        "redis_helper.cc",
+        "redis_helper.h",
         "crypt_helper.cc",
         "crypt_helper.h",
         "crypt_plus.cc",
@@ -53,9 +73,11 @@ cc_binary(
         # "@usr_local//:hiredis",
         "@hiredis//:hiredis",
         "@boost//:uuid",
+        ":libpgxx",
         # "@picosha2//:picosha2"
         # "@boost_uuid//:boost_uuid",
         # ":hiredis"
     ],
     # linkstatic = 1,
 )
+
