--- a/docker/deploy_docker/Dockerfile
+++ b/docker/deploy_docker/Dockerfile
@@ -1,15 +1,13 @@
-FROM alpine
+FROM ubuntu:20.04
 
 WORKDIR /root
 
-COPY bazel-bin/server/vipuserserver ./
-COPY keys ./
-ENV VIP_USER_SEVER_KEY=/root/keys/server.key
-ENV VIP_USER_SEVER_CRT=/root/keys/server.crt
+COPY ./vipuserserver ./keys ./
+ENV VIP_USER_SEVER_KEY=/root/keys/server.key VIP_USER_SEVER_CRT=/root/keys/server.crt
 
-RUN createdb -O postgres vipuser
+# RUN createdb -O postgres vipuser
 
 RUN mkdir /data > /dev/null
 VOLUME /data
 
-CMD ["bash"]
+CMD ["./vipuserserver"]
