--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,6 +20,11 @@ android {
 //                cppFlags "-std=c++11"
 //            }
 //        }
+        ndk {
+            // Specifies the ABI configurations of your native
+            // libraries Gradle should build and package with your APK.
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
+        }
     }
 
     sourceSets {
